# serenity

./: .clang-format  CMakeLists.txt
assets/shaders/: lighting.fs  shadowmap.fs
include/: perlin.hpp  raymath.h  utils.hpp
include/game/: game.hpp  grass.hpp  lights.hpp  player.hpp  resource.hpp  scene.hpp  terrain.hpp
src/: game.cpp  grass.cpp  lights.cpp  main.cpp  perlin.cpp  player.cpp  resource.cpp  scene.cpp  terrain.cpp
